Agrego diccionario en EDA y agrego cargar_datos.py

--- a/ai-service/eda.ipynb
+++ b/ai-service/eda.ipynb
@@ -11,6 +11,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6235831b",
+   "metadata": {},
+   "source": [
+    "## Diccionario de Datos\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### `nivel_alumno.csv` — Perfil demográfico del alumno\n",
+    "| Variable | Tipo | Descripción |\n",
+    "|----------|------|-------------|\n",
+    "| `IdAlumno` | String | Identificador único del alumno (ej: ALU0001) |\n",
+    "| `FechaNac` | Fecha | Fecha de nacimiento (formato DD-MM-YYYY) |\n",
+    "| `Genero` | Categórica | Género del alumno: `Masculino` / `Femenino` |\n",
+    "| `AyudaFinanciera` | Binaria | Recibe beca o ayuda económica: `0` = No / `1` = Sí |\n",
+    "| `ColegioTecnico` | Binaria | Proviene de colegio técnico secundario: `0` = No / `1` = Sí |\n",
+    "| `Fecha` | Fecha | Fecha de abandono de la carrera. Nulo si no abandonó |\n",
+    "| `Abandona` | Binaria | Abandonó la carrera: `0` = No / `1` = Sí |\n",
+    "| `AnioIngreso` | Numérica | Año en que ingresó a la carrera (2020–2024) |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### `nivel_materia.csv` — Registro de cursadas por alumno\n",
+    "| Variable | Tipo | Descripción |\n",
+    "|----------|------|-------------|\n",
+    "| `IdAlumno` | String | Identificador único del alumno |\n",
+    "| `Materia` | Categórica | Materia cursada: `AM1` (primer año) / `AM2` (segundo año) |\n",
+    "| `AnioCursada` | Numérica | Año en que cursó la materia (2020–2025) |\n",
+    "| `FechaNac` | Fecha | Fecha de nacimiento del alumno |\n",
+    "| `AyudaFinanciera` | Binaria | Recibe beca o ayuda económica: `0` = No / `1` = Sí |\n",
+    "| `ColegioTecnico` | Binaria | Proviene de colegio técnico secundario: `0` = No / `1` = Sí |\n",
+    "| `PromedioColegio` | Numérica | Promedio académico obtenido en el colegio secundario (escala 1–10) |\n",
+    "| `Asistencia` | Numérica | Porcentaje de clases a las que asistió durante la cursada (0.0 a 1.0) |\n",
+    "| `Recursa` | Binaria | Tuvo que volver a cursar la materia: `0` = No / `1` = Sí |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### `nivel_examen.csv` — Instancias de evaluación\n",
+    "| Variable | Tipo | Descripción |\n",
+    "|----------|------|-------------|\n",
+    "| `IdAlumno` | String | Identificador único del alumno |\n",
+    "| `Materia` | Categórica | Materia evaluada: `AM1` / `AM2` |\n",
+    "| `Anio` | Numérica | Año en que se rindió el examen (2020–2025) |\n",
+    "| `TipoExamen` | Categórica | Tipo de instancia: `Parcial` / `Recuperatorio` / `Final` |\n",
+    "| `Instancia` | Numérica | Número de instancia del examen dentro del tipo (1, 2 o 3) |\n",
+    "| `Genero` | Categórica | Género del alumno: `Masculino` / `Femenino` |\n",
+    "| `FechaNac` | Fecha | Fecha de nacimiento del alumno |\n",
+    "| `AyudaFinanciera` | Binaria | Recibe beca o ayuda económica: `0` = No / `1` = Sí |\n",
+    "| `ColegioTecnico` | Binaria | Proviene de colegio técnico secundario: `0` = No / `1` = Sí |\n",
+    "| `PromedioColegio` | Numérica | Promedio académico del colegio secundario (escala 1–10) |\n",
+    "| `Asistencia` | Numérica | Porcentaje de asistencia durante la cursada correspondiente (0.0 a 1.0) |\n",
+    "| `VecesRecursada` | Numérica | Cantidad de veces que el alumno recursó esa materia (0, 1 o 2) |\n",
+    "| `ExamenRendido` | Binaria | Se presentó a rendir: `0` = No / `1` = Sí |\n",
+    "| `AusenteExamen` | Binaria | Estuvo ausente en el examen: `0` = No / `1` = Sí |\n",
+    "| `Nota` | Numérica | Nota obtenida (escala 1–10). Nulo si `AusenteExamen = 1` |\n",
+    "| `FechaExamen` | Fecha | Fecha en que se rindió el examen (formato DD-MM-YYYY) |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Sección 0: Setup e Imports"
@@ -2944,7 +3003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "d05267b0",
    "metadata": {},
    "outputs": [
